ecmascript/parser/tests/test262-error-references/fail/cb92787da5075fd1.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/cb92787da5075fd1.js:1:26
  |
1 | ([[[[[[[[[[[[[[[[[[[[{a:b[0]}]]]]]]]]]]]]]]]]]]]])=>0;
  |                          ^^^

